--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         .control-button:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.1); background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%); }
         .control-button.active { background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%); color: #333; border-color: #a1c4fd; }
         .table-container { background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 6px 20px rgba(0,0,0,0.1); overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; font-size: 0.8em; }
-        th { background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%); color: #333; padding: 10px 6px; text-align: center; font-weight: 600; white-space: nowrap; cursor: pointer; user-select: none; transition: all 0.3s ease; position: sticky; top: 0; z-index: 10; font-size: 0.75em; }
+        table { width: 100%; border-collapse: collapse; font-size: 0.9em; }
+        th { background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%); color: #333; padding: 10px 6px; text-align: center; font-weight: 600; white-space: nowrap; cursor: pointer; user-select: none; transition: all 0.3s ease; position: sticky; top: 0; z-index: 10; }
         th:hover { background: linear-gradient(135deg, #8ab2f2 0%, #a1c4fd 100%); }
         th.sorted { background: linear-gradient(135deg, #8ab2f2 0%, #a1c4fd 100%); }
-        td { padding: 8px 6px; border-bottom: 1px solid #f8f9fa; white-space: nowrap; font-size: 0.8em; text-align: center; }
+        td { padding: 8px 6px; border-bottom: 1px solid #f8f9fa; white-space: nowrap; text-align: center; }
         tr:hover { background: #f1f5f9; }
         .name-cell { font-weight: 600; color: #2c3e50; min-width: 100px; text-align:right; }
         .player-name-icon { margin-right: 5px; font-size: 0.9em; }
-        .verbal-insights-cell { white-space: normal; font-size: 0.75em; line-height: 1.2; color: #5a6c7d; min-width: 150px; text-align: right;}
+        .verbal-insights-cell { white-space: normal; font-size: 0.9em; line-height: 1.2; color: #5a6c7d; min-width: 150px; text-align: right;}
         .position-gkp { background-color: #fff3cd !important; }
         .position-def { background-color: #d1ecf1 !important; }
         .position-mid { background-color: #d4edda !important; }
@@ -60,7 +60,7 @@
             width: 90%; max-width: 1200px; border-radius: 12px;
         }
         .close { color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer; }
-        #compareTable th { background: linear-gradient(135deg, #c2e9fb 0%, #a1c4fd 100%); }
+        #compareTable th { background: linear-gradient(135deg, #c2e9fb 0%, #a1c4fd 100%); font-size: 1.1em;}
         #compareTable { width: auto; margin: 0 auto; border-collapse: separate; border-spacing: 0; }
         #compareTable th, #compareTable td { border: 1px solid #ddd; padding: 8px; }
         #compareTable td { font-size: 1.1em; }
