--- a/index.html
+++ b/index.html
@@ -252,30 +252,29 @@
         }
         
         function getHardcodedSetPieceTakers() {
-            // Data parsed from the latest SetPieceTakerSS.csv
+            // Data parsed from the latest SetPieceTakerSS.csv and mapped to exact FPL web_names
             // NOTE: Only first penalty taker is used. First 2 for others.
-            // Names are normalized (e.g. Odegaard instead of Ødegaard)
             return {
-                "Arsenal": { "penalties": ["Saka"], "freekicks": ["Odegaard", "Rice"], "corners": ["Rice", "Saka"] },
+                "Arsenal": { "penalties": ["Saka"], "freekicks": ["Ødegaard", "Rice"], "corners": ["Rice", "Saka"] },
                 "Aston Villa": { "penalties": ["Watkins"], "freekicks": ["Digne", "Bailey"], "corners": ["Tielemans", "Digne"] },
                 "Bournemouth": { "penalties": ["Kluivert"], "freekicks": ["Tavernier", "Kluivert"], "corners": ["Tavernier", "Kluivert"] },
                 "Brentford": { "penalties": ["Wissa"], "freekicks": ["Damsgaard", "Lewis-Potter"], "corners": ["Damsgaard", "Jensen"] },
                 "Brighton": { "penalties": ["Welbeck"], "freekicks": ["Welbeck", "O'Riley"], "corners": ["Ayari", "O'Riley"] },
-                "Burnley": { "penalties": ["Flemming"], "freekicks": ["Anthony", "Flemming"], "corners": ["Anthony", "Lucas"] },
-                "Chelsea": { "penalties": ["Palmer"], "freekicks": ["Palmer", "James"], "corners": ["Enzo", "Neto"] },
+                "Burnley": { "penalties": ["Brownhill"], "freekicks": ["Anthony", "Brownhill"], "corners": ["Anthony", "Gudmundsson"] },
+                "Chelsea": { "penalties": ["Palmer"], "freekicks": ["Palmer", "James"], "corners": ["Gallagher", "Chilwell"] },
                 "Crystal Palace": { "penalties": ["Eze"], "freekicks": ["Eze", "Olise"], "corners": ["Eze", "Hughes"] },
-                "Everton": { "penalties": ["Ndiaye"], "freekicks": ["Alcaraz", "Garner"], "corners": ["McNeil", "Garner"] },
-                "Fulham": { "penalties": ["Jimenez"], "freekicks": ["Pereira", "Jimenez"], "corners": ["Pereira", "Lukic"] },
+                "Everton": { "penalties": ["McNeil"], "freekicks": ["Garner"], "corners": ["McNeil", "Garner"] },
+                "Fulham": { "penalties": ["Jiménez"], "freekicks": ["Andreas", "Jiménez"], "corners": ["Andreas", "Lukic"] },
                 "Leeds": { "penalties": ["Struijk"], "freekicks": ["Gruev", "Aaronson"], "corners": ["James", "Gruev"] },
-                "Liverpool": { "penalties": ["Salah"], "freekicks": ["Szoboszlai", "Mac Allister"], "corners": ["Mac Allister", "Wirtz"] },
-                "Man City": { "penalties": ["Haaland"], "freekicks": ["Marmoush", "Foden"], "corners": ["Foden", "Bernardo"] },
-                "Man Utd": { "penalties": ["Fernandes"], "freekicks": ["Fernandes", "Cunha"], "corners": ["Fernandes", "Mbeumo"] },
-                "Newcastle": { "penalties": ["Isak"], "freekicks": ["Trippier", "Schar"], "corners": ["Trippier", "Elanga"] }, 
+                "Liverpool": { "penalties": ["M.Salah"], "freekicks": ["Szoboszlai", "Mac Allister"], "corners": ["Mac Allister", "Wirtz"] },
+                "Man City": { "penalties": ["Haaland"], "freekicks": ["De Bruyne", "Foden"], "corners": ["Foden", "De Bruyne"] },
+                "Man Utd": { "penalties": ["B.Fernandes"], "freekicks": ["B.Fernandes", "Cunha"], "corners": ["B.Fernandes", "Mbeumo"] },
+                "Newcastle": { "penalties": ["Isak"], "freekicks": ["Trippier", "Schär"], "corners": ["Trippier", "Elanga"] }, 
                 "Nott'm Forest": { "penalties": ["Wood"], "freekicks": ["Gibbs-White", "Murillo"], "corners": ["Anderson", "Gibbs-White"] },
-                "Sunderland": { "penalties": ["Isidor"], "freekicks": ["Le Fee", "Roberts"], "corners": ["Le Fee", "Roberts"] },
-                "Spurs": { "penalties": ["Solanke"], "freekicks": ["Porro", "Maddison"], "corners": ["Kulusevski", "Porro"] },
-                "West Ham": { "penalties": ["Paqueta"], "freekicks": ["Ward-Prowse", "Paqueta"], "corners": ["Bowen", "Ward-Prowse"] },
-                "Wolves": { "penalties": ["Larsen"], "freekicks": ["Arias", "Bellegarde"], "corners": ["Bellegarde", "Arias"] }
+                "Sunderland": { "penalties": ["Rigg"], "freekicks": ["Roberts", "Pritchard"], "corners": ["Roberts", "Pritchard"] },
+                "Spurs": { "penalties": ["Solanke"], "freekicks": ["Pedro Porro", "Maddison"], "corners": ["Maddison", "Pedro Porro"] },
+                "West Ham": { "penalties": ["L.Paquetá"], "freekicks": ["Ward-Prowse", "L.Paquetá"], "corners": ["Bowen", "Ward-Prowse"] },
+                "Wolves": { "penalties": ["Strand Larsen"], "freekicks": ["J.Arias", "Sarabia"], "corners": ["Bellegarde", "Nouri"] }
             };
         }
 
