--- a/index.html
+++ b/index.html
@@ -384,18 +384,18 @@
 
                 // DRAFT SCORE LOGIC
                 let draft_score = 0;
-                // Newcomers or low-minutes players: Hype Score
-                if (p.minutes < 90) { 
+                if (minutes === 0) { // Newcomer: Hype Score
                     draft_score = (p.now_cost * 4) + (parseFloat(p.selected_by_percent) * 1.5);
-                
-                // Established players
-                } else {
+                } else if (minutes > 0 && minutes < 90) { // Low minutes player: Conservative score
+                    draft_score = p.total_points * 1.5;
+                } else { // Established players
                     draft_score = (parseFloat(p.points_per_game) * 10) + 
                                   (p.ict_per_90 * 2) + 
                                   (p.xGI_per90 * 20);
                     draft_score += (parseFloat(p.selected_by_percent) / 5); // Ownership boost
                 }
                 p.draft_score = Math.max(0, draft_score); // Ensure no negative scores
+
 
                 return p;
             });
